--- a/src/04_modelviz.qmd
+++ b/src/04_modelviz.qmd
@@ -314,7 +314,7 @@ predictor = Predictor$new(model_main_powkin, data = X, y = data$PronTypeSimple)
 Generate Shapley values:
 ```{r}
 shaplist = list()
-examples_to_use = c(71, 104, 12, 84, 340, 331, 113, 124, 93, 234, 344, 122, 97, 224, 131, 112, 124, 133, 237, 344, 122, 97, 224, 88, 61, 43, 127, 335, 73, 261, 72, 142, 90, 215, 163)
+examples_to_use = c(71, 104, 12, 84, 340, 331, 113, 124, 93, 234, 344, 122, 97, 224, 131, 112, 124, 133, 237, 344, 122, 97, 224, 88, 61, 43, 127, 335, 73, 261, 72, 142, 90, 215, 163, 89)
 for(x in examples_to_use){
     print(glue("Now calculating Shapley value for data no.: {x}"))
     shaplist[[x]] = Shapley$new(predictor, x.interest = X[x, ], sample.size = 50)
